--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,10 @@
 name=fix_fft
-version=0.9
+version=1.0
 author=Dimitrios P. Bouras <dbouras@ieee.org>
 maintainer=Enrique Condes <enrique@shapeoko.com>
 sentence=A library for implementing fixed-point in-place Fast Fourier Transform on Arduino. It sacrifices precision and instead it is way faster than floating-point implementations.
 paragraph=With this library you can calculate the frequency of a sampled signal.
 category=Data Processing
 url=https://github.com/kosme/fix_fft
-architectures=*
+architectures=avr
 includes=fix_fft.h
